@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2008,v 1.1884 2008/08/16 02:47:23 taca Exp $
+$NetBSD: CHANGES-2008,v 1.1885 2008/08/16 03:20:39 taca Exp $
 
 Changes to the packages collection and infrastructure in 2008:
 
@@ -3215,3 +3215,4 @@ Changes to the packages collection and infrastructure in 2008:
 	Updated databases/ruby-DBD-sqlite to 0.2.2 [taca 2008-08-16]
 	Updated databases/ruby-DBD-sqlite3 to 0.2.2 [taca 2008-08-16]
 	Updated time/ruby-tzinfo to 0.3.9 [taca 2008-08-16]
+	Updates security/ipsec-tools to 0.7.1 [manu 2008-08-16]
